# agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  config.toml.example  main.py  pyproject.toml
agents/: __init__.py  _bedrock.py  agent.py  background.py  chunker.py  compression.py  config.py  dm_policy.py  embeddings.py  gateway.py  hooks.py  log.py  memory.py  messaging.py  permissions.py  routines.py  s_full.py  scanner.py  sessions.py  skills.py  tasks.py  team.py  todos.py  tools.py  vector_store.py  workspace.py
agents/channels/: base.py  cli.py  telegram.py
hooks/: example_token_tracker.py
tests/: conftest.py  test_agent_loop.py  test_bedrock.py  test_config.py  test_dm_policy.py  test_gateway.py  test_hooks.py  test_memory.py  test_permissions.py  test_routines.py  test_scanner.py  test_sessions.py  test_tasks.py  test_tools.py  test_workspace.py
