[project]
name = "agent"
version = "0.1.0"
description = "An open-source AI agent framework with multi-channel support, persistent memory, and cron routines — powered by AWS Bedrock"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "croniter>=1.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["agents"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
